Fixed wrap - minor adjustments

--- a/css/product-window.css
+++ b/css/product-window.css
@@ -32,9 +32,10 @@
 @media (min-width: 1024px){
     .class-card { flex-direction: row!important; }
 
+    .class-card-wrap {flex-direction: row!important; flex-wrap: wrap!important;}
+
     #product-window{
         flex-direction: row!important;
-        flex-wrap: wrap!important;
     }
 
     #categories {
@@ -45,9 +46,9 @@
     
 
     .products{
-        height: 250px;
-        width: 450px;
-        margin-right: 30px;
+        height: 230px;
+        width: 500px;
+        margin-right: 0px;
     }
 
     .product{
